--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
+config.py
+life2film.py
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
 
 # C extensions
-*.so
 
 # Distribution / packaging
 .Python
